--- a/BlazorWebAppInteractive/BlazorWebAppInteractive.csproj
+++ b/BlazorWebAppInteractive/BlazorWebAppInteractive.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="wwwroot\personal_data\" />
     <Folder Include="wwwroot\pictures\profiles\" />
   </ItemGroup>
 </Project>
